--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,7 +1,6 @@
 #Grails Metadata file
-#Thu Oct 22 01:16:00 GMT+00:00 2009
-app.grails.version=1.2-M3
+#Sun Oct 25 23:10:22 GMT+00:00 2009
+app.grails.version=1.2-SNAPSHOT
 app.name=spock-grails
-app.version=0.3-SNAPSHOT
-plugins.hibernate=1.2-M3
-plugins.tomcat=1.2-M3
+plugins.hibernate=1.2-SNAPSHOT
+plugins.tomcat=1.2-SNAPSHOT
