--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -43,6 +43,12 @@
       <groupId>org.grails</groupId>
       <artifactId>grails-gorm</artifactId>
       <version>1.2-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-instrument-classloading</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
