--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-grails</artifactId>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <name>Spock Framework - Grails Plugin</name>
   <url>http://grails.org/plugin/spock</url>
 
