--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Sun Oct 25 23:10:22 GMT+00:00 2009
+#Tue Oct 27 00:26:23 GMT+00:00 2009
 app.grails.version=1.2-SNAPSHOT
 app.name=spock-grails
+app.version=0.3-SNAPSHOT
 plugins.hibernate=1.2-SNAPSHOT
 plugins.tomcat=1.2-SNAPSHOT
