renamed Maven goal 'find-specks' to 'find-specs' (old name still works for now)

--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -70,7 +70,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>find-specks</goal>
+              <goal>find-specs</goal>
             </goals>
           </execution>
         </executions>
