--- a/spock-specs/pom.xml
+++ b/spock-specs/pom.xml
@@ -35,7 +35,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>find-specks</goal>
+              <goal>find-specs</goal>
             </goals>
           </execution>
         </executions>
