--- a/spock-guice/pom.xml
+++ b/spock-guice/pom.xml
@@ -26,7 +26,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>find-specks</goal>
+              <goal>find-specs</goal>
             </goals>
           </execution>
         </executions>
