--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -15,6 +15,9 @@
   <name>Spock Framework - Grails Plugin</name>
   <url>http://grails.org/plugin/spock</url>
 
+  <properties>
+	<grails.version>1.2-SNAPSHOT</grails.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.spockframework</groupId>
@@ -38,29 +41,17 @@
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-crud</artifactId>
-      <version>1.2-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-instrument-classloading</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>${grails.version}</version>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-gorm</artifactId>
-      <version>1.2-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-instrument-classloading</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>${grails.version}</version>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-test</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>${grails.version}</version>
     </dependency>
 
     <dependency>
@@ -131,7 +122,7 @@
     <dependency>
       <groupId>org.tmatesoft.svnkit</groupId>
       <artifactId>svnkit</artifactId>
-      <version>1.2.3.5521</version>
+      <version>1.3.1</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
@@ -175,18 +166,28 @@
   </pluginRepositories>
 
   <build>
-    <pluginManagement/>
+    <sourceDirectory>src/groovy</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <configuration>
+          <skip>true</skip>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.grails</groupId>
         <artifactId>grails-maven-plugin</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>${grails.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
+            <id>build</id>
             <goals>
-<!-- grails-maven-plugin only works with my patches, so we don't run these goals at the moment
-              <goal>maven-war</goal>
               <goal>init</goal>
               <goal>maven-clean</goal>
               <goal>validate</goal>
@@ -194,27 +195,30 @@
               <goal>maven-compile</goal>
               <goal>maven-test</goal>             
               <goal>maven-functional-test</goal>
--->
             </goals>
           </execution>
+          <execution>
+            <id>package-plugin</id>
+            <phase>package</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <command>package-plugin</command>
+            </configuration>
+          </execution>
+          <execution>
+            <id>release-plugin</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <command>release-plugin</command>
+              <args>--zipOnly --username=${grails.plugin.repo.user} --password=${grails.plugin.repo.password} --message="nightly build"</args>
+            </configuration>
+          </execution>
         </executions>
-        <dependencies>
-          <dependency>
-            <artifactId>spring-instrument-classloading</artifactId>
-            <groupId>org.springframework</groupId>
-            <version>3.0.0.M3</version>
-          </dependency>
-          <dependency>
-            <groupId>org.grails</groupId>
-            <artifactId>grails-scripts</artifactId>
-            <version>1.2-SNAPSHOT</version>
-          </dependency>
-          <dependency>
-            <groupId>org.grails</groupId>
-            <artifactId>grails-bootstrap</artifactId>
-            <version>1.2-SNAPSHOT</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
