--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,12 @@
       <dependency>
         <groupId>org.objenesis</groupId>
         <artifactId>objenesis</artifactId>
-        <version>1.1</version>
+        <version>1.2</version>
       </dependency>
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>1.1.118</version>
+        <version>1.2.123</version>
       </dependency>
       <dependency>
         <groupId>org.apache.ant</groupId>
@@ -228,7 +228,7 @@
           </plugin>
           <plugin>
             <artifactId>maven-source-plugin</artifactId>
-            <version>2.1</version>
+            <version>2.1.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -240,11 +240,14 @@
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.5</version>
+            <version>2.6.1</version>
               <configuration>
                 <links>
                   <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                   <link>http://groovy.codehaus.org/gapi</link>
+                  <link>http://static.springsource.org/spring/docs/2.5.x/api</link>
+                  <link>http://google-guice.googlecode.com/svn/trunk/javadoc</link>
+                  <link>http://tapestry.apache.org/tapestry5/apidocs</link>
                 </links>
               </configuration>
             <executions>
