--- a/spock-spring/build.gradle
+++ b/spock-spring/build.gradle
@@ -18,5 +18,9 @@ project(":spock-spring") {
     testCompile "org.springframework:spring-context:2.5.6.SEC01"
     // not used directly at compile-time, but needed by groovyc
     testCompile "org.springframework:spring-core:2.5.6.SEC01"
+    testCompile "org.springframework:spring-jdbc:2.5.6.SEC01"
+    testCompile "org.springframework:spring-tx:2.5.6.SEC01"
+    testRuntime "com.h2database:h2:1.2.123"
+    testRuntime "log4j:log4j:1.2.14"
   }
 }
