--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
   group = "org.spockframework"
-  version = "0.3-SNAPSHOT"
+  version = "0.3"
 
   groovyArtifact = "org.codehaus.groovy:groovy-all:1.6.5"
 }
