--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -26,7 +26,7 @@
       <dependency
         groupId="org.spockframework"
         artifactId="spock-core"
-        version="0.3" /> 
+        version="0.4-SNAPSHOT" />
 <!-- Optional dependencies for using Spock -->
       <!-- enables mocking of classes (in addition to interfaces) -->
       <dependency 
