--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -2,6 +2,6 @@
 #Tue Oct 27 00:26:23 GMT+00:00 2009
 app.grails.version=1.2-SNAPSHOT
 app.name=spock-grails
-app.version=0.3
+app.version=0.4-SNAPSHOT
 plugins.hibernate=1.2-SNAPSHOT
 plugins.tomcat=1.2-SNAPSHOT
