--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.spockframework</groupId>
     <artifactId>spock-parent</artifactId>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
