--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
 #Tue Oct 27 00:26:23 GMT+00:00 2009
-app.grails.version=1.2-SNAPSHOT
+app.grails.version=1.2.0.RC1
 app.name=spock-grails
 app.version=0.4-SNAPSHOT
-plugins.hibernate=1.2-SNAPSHOT
-plugins.tomcat=1.2-SNAPSHOT
+plugins.hibernate=1.2.0.RC1
+plugins.tomcat=1.2.0.RC1
