update to GMaven 1.2

--- a/spock-core/pom.xml
+++ b/spock-core/pom.xml
@@ -16,7 +16,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.groovy.maven</groupId>
+        <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>
       </plugin>
     </plugins>
