--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
           <version>2.4</version> <!-- 2.4 introduces skip property -->
         </plugin>
         <plugin>
-          <groupId>org.codehaus.groovy.maven</groupId>
+          <groupId>org.codehaus.gmaven</groupId>
           <artifactId>gmaven-plugin</artifactId>
-          <version>1.0</version>
+          <version>1.2</version>
           <configuration>
             <providerSelection>1.6</providerSelection>
           </configuration>
@@ -67,9 +67,9 @@
           </executions>
           <dependencies>
             <dependency>
-              <groupId>org.codehaus.groovy.maven.runtime</groupId>
+              <groupId>org.codehaus.gmaven.runtime</groupId>
               <artifactId>gmaven-runtime-1.6</artifactId>
-              <version>1.0</version>
+              <version>1.2</version>
               <exclusions>
                 <exclusion>
                   <groupId>org.codehaus.groovy</groupId>
