--- a/spock-specs/pom.xml
+++ b/spock-specs/pom.xml
@@ -15,7 +15,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.groovy.maven</groupId>
+        <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>     
       </plugin>
       <plugin>
