reworked extension mechanism renamed/moved some specs moved configuraiton of spock maven plugin into master POM

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,18 @@
             </dependency>
           </dependencies>
         </plugin>
+        <plugin>
+          <groupId>org.spockframework</groupId>
+          <artifactId>spock-maven</artifactId>
+          <version>${project.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>find-specs</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
