--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -66,7 +66,7 @@
         -->
         <groupId>org.spockframework</groupId>
         <artifactId>spock-maven</artifactId>
-        <version>${project.version}</version> <!-- you should specify a concrete version number here -->
+        <version>${project.version}</version> <!-- you need to specify a concrete version number here -->
         <executions>
           <execution>
             <goals>
