--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,7 @@
         <module>spock-tapestry</module>
         <module>spock-guice</module>
         <module>spock-spring</module>
+        <module>spock-unitils</module>
       </modules>
     </profile>
     <profile>
@@ -206,6 +207,7 @@
         <module>spock-tapestry</module>
         <module>spock-guice</module>
         <module>spock-spring</module>
+        <module>spock-unitils</module>
       </modules>
       <properties>
         <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
@@ -226,6 +228,7 @@
         <module>spock-tapestry</module>
         <module>spock-guice</module>
         <module>spock-spring</module>
+        <module>spock-unitils</module>
       </modules>
       <build>
         <plugins>
