--- a/spock-maven/pom.xml
+++ b/spock-maven/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock-maven</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Spock Framework - Maven Plugin</name>
+  <name>Spock Framework - Maven Module</name>
 
   <dependencies>
 <!-- compile dependencies -->
