--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
             <dependency>
               <groupId>org.codehaus.groovy</groupId>
               <artifactId>groovy-all</artifactId>
-              <version>1.7-rc-2</version>
+              <version>1.7.0</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -105,7 +105,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.7-rc-2</version>
+        <version>1.7.0</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
