updated spock-grails build to grails 1.2.0 added spock-grails to commit build

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
         <module>spock-guice</module>
         <module>spock-spring</module>
         <module>spock-unitils</module>
+        <module>spock-grails</module>
       </modules>
     </profile>
     <profile>
